--- a/.gitmodules
+++ b/.gitmodules
@@ -30,7 +30,7 @@
 	path = tchaikovsky_seasons
 	url = https://github.com/DCMLab/tchaikovsky_seasons.git
 	branch = main
-[submodule "grieg_lyrical_pieces"]
-	path = grieg_lyrical_pieces
+[submodule "grieg_lyric_pieces"]
+	path = grieg_lyric_pieces
 	url = https://github.com/DCMLab/grieg_lyric_pieces.git
 	branch = main
